[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-toolkit"
version = "0.1.0"
description = "A toolkit for data quality checks, cleaning, and reporting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]
